--- a/css/_subnav.scss
+++ b/css/_subnav.scss
@@ -6,7 +6,7 @@
 	list-style-type: none;
 	font-size: .8em;
 	background-image: none;
-	min-height: 70px;
+	// min-height: 70px;
 	display: block;
 	margin-left: -20px;
 	margin-bottom: -20px;
