--- a/css/styles.css
+++ b/css/styles.css
@@ -87,69 +87,57 @@ main p {
   line-height: 1.6em;
 }
 
-.equal-height #sub-nav ul li.active .level3 li a, .equal-height #sub-nav ul li:hover .level3 li a, .equal-height #sub-nav ul li .level3 li a {
+.equal-height #sub-nav ul li.active .level3 li a, .equal-height #sub-nav ul li:hover .level3 li a, .equal-height #sub-nav ul li.level3 li a {
   color: #fff;
   text-transform: capitalize;
-  font-weight: 400;
-  margin: 0px;
+  font-weight: 200;
   list-style-type: none;
   font-size: .8em;
   background-image: none;
   display: block;
-  margin-left: -20px;
-  margin-bottom: -20px;
 }
 
 .equal-height #sub-nav {
   background-color: #82ab45;
   height: 100%;
 }
+.equal-height #sub-nav ul {
+  padding: 0;
+}
 .equal-height #sub-nav ul li {
-  background-color: #fff;
-  margin: 10px;
-  min-height: 90px;
+  margin: 1em;
   background-repeat: no-repeat;
   background-position: bottom right;
-  font-weight: 600;
+  font-weight: 200;
   list-style-type: none;
 }
 .equal-height #sub-nav ul li a {
-  color: #085282;
+  color: #fff;
+  padding: 0;
 }
 .equal-height #sub-nav ul li a:hover {
   background-color: transparent;
+  color: #085282;
+}
+.equal-height #sub-nav ul li.current a {
+  color: #085282;
 }
 .equal-height #sub-nav ul li.active {
-  background-color: #085282;
+  color: #085282;
 }
 .equal-height #sub-nav ul li.active a {
   color: #fff;
 }
-.equal-height #sub-nav ul li.active .level3 {
-  margin-bottom: 30px;
-}
-.equal-height #sub-nav ul li.active .level3 li {
-  background-color: #085282;
-}
-.equal-height #sub-nav ul li:hover {
-  background-color: #085282;
-}
 .equal-height #sub-nav ul li:hover a {
+  color: #085282;
+}
+.equal-height #sub-nav ul li.level3 {
+  padding-left: 2em;
+}
+.equal-height #sub-nav ul li.level3 li a:hover a {
   color: #fff;
 }
-.equal-height #sub-nav ul li:hover .level3 li {
-  background-color: #085282;
-}
-.equal-height #sub-nav ul li .level3 li a:hover {
-  background-color: #085282;
-}
-.equal-height #sub-nav ul li .level3 li a:hover a {
-  color: #fff;
-}
-.equal-height #sub-nav ul li .level3 li:hover {
-  background-color: #085282;
-}
-.equal-height #sub-nav ul li .level3 li:hover a {
+.equal-height #sub-nav ul li.level3 li:hover a {
   color: #fff;
 }
 
@@ -478,6 +466,7 @@ input {
   width: 100%;
   z-index: 0;
   height: 450px;
+  margin-bottom: -90px;
 }
 .largeheader .caption {
   background-color: rgba(255, 255, 255, 0.6);
