--- a/css/styles.css
+++ b/css/styles.css
@@ -126,7 +126,7 @@ main p {
   color: #686868;
 }
 .equal-height #sub-nav ul li.active {
-  color: #686868;
+  color: #82ab45;
   background-color: #f1f1f1;
 }
 .equal-height #sub-nav ul li.active a {
