--- a/css/_subnav.scss
+++ b/css/_subnav.scss
@@ -1,5 +1,5 @@
 %current-link {
-	color: $white;
+	color: $grey;
 	text-transform: capitalize;
 	font-weight: 200;
 	// margin: 0px;
@@ -8,6 +8,7 @@
 	background-image: none;
 	// min-height: 70px;
 	display: block;
+	
 }
 
 #sub-nav {
@@ -48,7 +49,7 @@
 				a {
 					color: $grey;
 					// text-transform: capitalize;
-					// font-weight: 400;
+					font-weight: 400;
 					// margin: 0px;
 					// list-style-type: none;
 					// font-size: .8em;
@@ -92,6 +93,7 @@
 			&.level3 {
 				padding-left: 2em;
 				li {
+					border-bottom: none;
 					a {
 						@extend %current-link;
 
@@ -100,6 +102,7 @@
 
 							a {
 								color: $grey;
+								font-weight: 400;
 							}
 						}
 						
