--- a/css/styles.css
+++ b/css/styles.css
@@ -88,7 +88,7 @@ main p {
 }
 
 .equal-height #sub-nav ul li.active .level3 li a, .equal-height #sub-nav ul li:hover .level3 li a, .equal-height #sub-nav ul li.level3 li a {
-  color: #fff;
+  color: #686868;
   text-transform: capitalize;
   font-weight: 200;
   list-style-type: none;
@@ -131,6 +131,7 @@ main p {
 }
 .equal-height #sub-nav ul li.active a {
   color: #686868;
+  font-weight: 400;
 }
 .equal-height #sub-nav ul li:hover a {
   color: #686868;
@@ -139,8 +140,12 @@ main p {
 .equal-height #sub-nav ul li.level3 {
   padding-left: 2em;
 }
+.equal-height #sub-nav ul li.level3 li {
+  border-bottom: none;
+}
 .equal-height #sub-nav ul li.level3 li a:hover a {
   color: #686868;
+  font-weight: 400;
 }
 .equal-height #sub-nav ul li.level3 li:hover a {
   color: #686868;
