--- a/css/_subnav.scss
+++ b/css/_subnav.scss
@@ -50,7 +50,7 @@
 					margin-top: -18px;
 					a {
 						color: $grey;
-
+						text-decoration: none;
 						// text-transform: capitalize;
 						font-weight: 400;
 						// margin: 0px;
@@ -85,7 +85,7 @@
 				.level3 {
 					li {
 						// background-color: $moodyblue;
-						border-bottom: none;
+						
 						a { 
 							@extend %current-link;
 						}
