--- a/css/styles.css
+++ b/css/styles.css
@@ -141,6 +141,13 @@ main p {
   text-decoration: none;
   font-weight: 400;
 }
+.equal-height #sub-nav ul li:hover {
+  background-color: #f1f1f1;
+  color: #686868;
+  font-weight: 400;
+  margin-top: -20px;
+  padding-top: 20px;
+}
 .equal-height #sub-nav ul li:hover a {
   color: #686868;
   font-weight: 400;
