--- a/css/_subnav.scss
+++ b/css/_subnav.scss
@@ -81,13 +81,7 @@
 				}
 
 			&:hover {
-
-				background-color: $light-grey;
-				color: $grey;
-				font-weight: 400;
-				margin-top: -20px;
-				padding-top: 20px;
-
+				// background-color: $moodyblue;
 				a {
 					color: $grey;
 					font-weight: 400;
