--- a/css/styles.css
+++ b/css/styles.css
@@ -712,9 +712,9 @@ p {
   color: #273891;
   font-size: 30px;
 }
-
-#subscribe-form {
-  margin-top: 1.5em;
+#firsttoknow p, #firsttoknow #thank-you {
+  font-size: 1.5em;
+  font-weight: 200;
 }
 
 #subscribeBtn {
@@ -734,7 +734,6 @@ footer {
   font-style: normal;
   font-weight: 400;
   line-height: 1.42857143;
-  margin-top: 10px;
 }
 
 @media (min-width: 768px) {
