--- a/css/styles.css
+++ b/css/styles.css
@@ -69,7 +69,10 @@ main p {
   line-height: 1.6em; }
 
 .page-content .btn {
-  color: #FFF; }
+  color: #FFF;
+  margin: 1em auto;
+  font-size: 1em;
+  padding: 1em; }
 .page-content .btn.primary {
   background-color: #dd8726; }
 .page-content .btn.secondary {
