--- a/css/styles.scss
+++ b/css/styles.scss
@@ -42,6 +42,9 @@ main {
 .page-content {
 	.btn {
 		color: #FFF;
+		margin: 1em auto;
+		font-size: 1em;
+		padding: 1em;
 		&.primary{
 			background-color: $orange;
 		}
