Changed some styles for pull quotes

--- a/css/_pullquotes.scss
+++ b/css/_pullquotes.scss
@@ -2,8 +2,10 @@
 /* CUSTOM STYLES FOR PULL QUOTES - MIKE JANUS */
 
 .pull-quote {
+	margin-left: -15px;
+	margin-right: -15px;
 	p {
-		 color:#045282;
+		color:#045282;
 	}
 	.pull-quote .pull-quote-right {
 		color:#dd8726;
