--- a/css/_resources.scss
+++ b/css/_resources.scss
@@ -46,8 +46,6 @@
 	
 }
 
-
-
 }
 .login-form {
 	margin-top: 1em;
@@ -61,5 +59,15 @@
 		color: white;
 		text-transform: uppercase;
 		font-weight: bold;
+	}
+	.resource {
+		padding: .3em;
+		a {
+			color: $orange;
+		}
+		.fa {
+			color: $moodyblue;
+			padding-right: .5em;
+		}
 	}
 }
