Added image width to _pullquotes
Added image width to _pullquotes

--- a/css/_pullquotes.scss
+++ b/css/_pullquotes.scss
@@ -7,6 +7,9 @@
 	p {
 		color:#045282;
 	}
+	img.pull-quote-image {
+		width: 100%;
+	}
 	.pull-quote .pull-quote-right {
 		color:#dd8726;
 		padding:0 0 10px 10px;
