Added text align
Added text align

--- a/css/_pullquotes.scss
+++ b/css/_pullquotes.scss
@@ -19,7 +19,8 @@
 	}
 	.image-caption {
 		color: #FFF;
-		font-weight:bold;
+		font-weight:normal;
+		text-align:center;
 		position:relative;top:-24px;right:0;
 		background:#82ab45;
 		padding:6px 0 7px 0;
