Added full width
Added full width

--- a/css/_pullquotes.scss
+++ b/css/_pullquotes.scss
@@ -35,7 +35,7 @@
 	}
 }
 
-.col-sm-12 {
+.quote.col-sm-12 {
 	.pull-quote.quote-section.quote p{
      &:first-child {
       border:solid 1px #EEEEEE;
