--- a/css/_pullquotes.scss
+++ b/css/_pullquotes.scss
@@ -6,6 +6,8 @@
 	margin-right: -15px;
 	p {
 		color:#045282;
+		padding-bottom: 0;
+		line-height: 2.5em;
 	}
 	img.pull-quote-image {
 		width: 100%;
@@ -27,34 +29,34 @@
 		border-radius:0 0 5px 5px;
 	}
 	.quote_left {
-		font-size:40px;position:relative;top:3px;left:-1px;font-weight:normal;
+		position: relative;
+		top: -9px;
+		left: -2px;
 	}
 
 	.quote_right {
-		font-size:40px;position:relative;top:3px;left:4px;font-weight:normal;
+		position: relative;
+		top: -10px;
+		left: 4px;
+	}
+	.quote-section .quote.col-sm-12 {
+		background:#F9F9F9;
+		border:solid 1px #EEEEEE;
+		padding:0 15px 8px 15px;
+		border-radius:5px;
+	}
+	p:last-child {
+		color:#dd8726;
+		margin: 0;
+		padding: 0;
+	}
+	.col-sm-6 {	
+		padding:0;
+		margin-top:0;
 	}
 }
 
-.quote.col-sm-12 {
-	.pull-quote.quote-section.quote p{
-     &:first-child {
-      border:solid 1px #EEEEEE;
-      padding:0 15px 8px 15px;
-      border-radius:5px;
-      background:#F9F9F9;
-      }
 
-      &:last-child {
-      color:#dd8726;
-      }
-   }
-}
-
-
-.quote.col-sm-6 {	
-  padding:0;
-  margin-top:0;
-}
 
 div.clearfix.page-content .pull-quote-right p em {
 	font-size:18px;
