Modified a bunch of stuff

--- a/css/_header-navbar.scss
+++ b/css/_header-navbar.scss
@@ -23,6 +23,39 @@
 		background-color: #00257a;
 		.logo {
 			height: 40px;
+			img {
+				height: 40px;
+			}
+		}
+		ul.header-links {
+			a:hover{
+				text-decoration: none;
+			}
+			li {
+				display: inline-block;
+				&.contact-us {
+					background-color: $green;
+					color: white;
+					text-transform: uppercase;
+					padding-top: .9em;
+					font-size: .9em;
+					font-weight: 300;
+					&:hover {
+						background-color: lighten($green, 5%);
+					}
+				}
+				&.donate {
+					background-color: $orange;
+					color: white;
+					text-transform: uppercase;
+					padding-top: .9em;
+					font-size: .9em;
+					font-weight: 300;
+					&:hover {
+						background-color: lighten($orange, 5%);
+					}
+				}
+			}
 		}
 		.emory-wide {
 			ul .nav-box #form-search .btn {
@@ -32,6 +65,7 @@
 			ul li.top {
 				&.search {
 					padding-top: 0;
+					margin-right: -16px;
 				}
 				.nav-box.search {
 					height: auto;
@@ -44,6 +78,7 @@
 				border: none;
 				background-color: #4070cb;
 			}
+
 		}
 	}
 }
