--- a/css/_donate.scss
+++ b/css/_donate.scss
@@ -52,13 +52,16 @@
 
 .donate-footer {
   background: #dc8623;
-  padding: 1em 1em 2em;
+  padding: 1em 1em 1em;
   color: #fff;
   font-weight: 500;
   margin: 0 -30px;
-
+  text-align: center;
   h1 {
     color: #fff;
     font-size: 1.5em;
+  }
+  p {
+    color: #FFF;
   }
 }
