--- a/css/_subnav.scss
+++ b/css/_subnav.scss
@@ -14,60 +14,105 @@
 #sub-nav {
 	.equal-height & {
 		height: 100%;
-
 		ul {
 			padding: 0;
+			.level2 {
+				li {
+					&:hover{
+					color: $grey;
+					font-weight: 400;
+					background-color: #f1f1f1;
+					}
+				}	
+			}
+			.level3 {
+				li {
+					border-bottom: none;
+					&:hover{
+					color: $grey;
+					font-weight: 400;
+					background-color: #f1f1f1;
+					}
+					a {
+						padding-right: 10px;
+					}
+				}	
+			}
+			.level4 {
+				li {
+					a {
+						font-weight: 200
+					}
+					&:hover{
+					color: $grey;
+					font-weight: 400;
+					background-color: #f1f1f1;
+					}
+				}	
+			}
 			li {
-			// background-color: $white;
-			margin: 1em 0;
-			// min-height: 90px;
-			background-repeat: no-repeat;
-			background-position: bottom right;
-			font-weight: 200;
-			//text-transform: uppercase;
-			list-style-type: none;
-			border-bottom: #ccc solid 1px;
-			padding-bottom: 20px;
-			text-align: right;
-			a {
-				color: $grey;
-				padding-right: 10px;
-					// padding: .5em 0em;
+				margin: 0;
+				background-repeat: no-repeat;
+				background-position: bottom right;
+				font-weight: 200;
+				list-style-type: none;
+				border-bottom: #ccc solid 1px;
+				text-align: right;
+				padding: 13px 0px 13px 10px;
+				
+				&:nth-child(1) {
+    				padding: 17px 0px 0px 0px;
+				}
+				
+				a {
+					color: $grey;
+					padding-right: 10px;
 					&:hover {
-						background-color: transparent;
 						color: $grey;
 						font-weight: 400;
 					}
 				}
-				&.current a{
+				&.current a {
 					color: $grey;
+					background-color: #f1f1f1;
+					text-decoration: none;
 				}
-
 				&.active {
-					color: $green;
 					background-color: $light-grey;
-					padding-top: 20px;
-					margin-top: -18px;
 					a {
 						color: $grey;
-
-						// text-transform: capitalize;
 						font-weight: 400;
-						// margin: 0px;
-						// list-style-type: none;
-						// font-size: .8em;
-						// background-image: none;
-						// min-height: 70px;
-						// display: block;
-						// margin-left: -20px;
-						// margin-bottom: -20px;
 					}
-
-					.level3 {
-						// margin-bottom: 30px;
-
+					.level2 {
 						li {
-							// background-color: $moodyblue;
+							a { 
+								@extend %current-link;
+								font-weight: bold;
+							}
+						}
+					}
+					.level3 {
+						li {
+							a { 
+								@extend %current-link;
+								font-weight: bold;
+							}
+						}
+					}
+				}
+				&:hover {
+					a {
+						color: $grey;
+						font-weight: 400;
+						text-decoration: none;
+					}
+					.level2 {
+
+						background-color: #f1f1f1;
+					}
+					.level3 {
+						li {
+							border-bottom: none;
 							a { 
 								@extend %current-link;
 							}
@@ -75,57 +120,9 @@
 					}
 				}
 
-				&:hover {
-				// background-color: $moodyblue;
-				a {
-					color: $grey;
-					font-weight: 400;
-				}
-
-				.level3 {
-					li {
-						// background-color: $moodyblue;
-						border-bottom: none;
-						a { 
-							@extend %current-link;
-						}
-					}
-				}
+				
 			}
-
-			&.level3 {
-				padding-left: 2em;
-				li {
-					border-bottom: none;
-					a {
-						@extend %current-link;
-
-						&:hover {
-							// background-color: $moodyblue;
-
-							a {
-								color: $grey;
-								font-weight: 400;
-							}
-						}
-						
-					}
-
-					&:hover {
-						// background-color: $moodyblue;
-						a {
-							color: $grey;
-							font-weight: 400;
-						}
-					}
-					
-				}
-
-			} 
 		}
 	}
-
-
-}
 }
 
