--- a/css/_subnav.scss
+++ b/css/_subnav.scss
@@ -60,9 +60,9 @@
 				text-align: right;
 				padding: 13px 0px 13px 10px;
 				
-				&:nth-child(1) {
-    				padding: 17px 0px 0px 0px;
-				}
+				//&:nth-child(1) {
+    			//	padding: 17px 0px 0px 0px;
+				//}
 				
 				a {
 					color: $grey;
@@ -125,4 +125,3 @@
 		}
 	}
 }
-
