Made changes to _subnav.scss

--- a/css/_subnav.scss
+++ b/css/_subnav.scss
@@ -5,68 +5,84 @@
 	// margin: 0px;
 	list-style-type: none;
 	font-size: .8em;
-	background-image: none;
 	// min-height: 70px;
 	display: block;
 	
 }
 
-#sub-nav {
-	.equal-height & {
+.equal-height {
+	#sub-nav {
 		height: 100%;
+		margin-top: 20px;
 		ul {
 			padding: 0;
-			.level2 {
+
+			&.level2 {
 				li {
 					&:hover{
-					color: $grey;
-					font-weight: 400;
-					background-color: #f1f1f1;
+						color: $grey;
+						font-weight: 400;
+						background-color: #f1f1f1;
 					}
 				}	
 			}
-			.level3 {
+			&.level3 {
 				li {
-					border-bottom: none;
 					&:hover{
-					color: $grey;
-					font-weight: 400;
-					background-color: #f1f1f1;
+						color: $grey;
+						font-weight: 400;
+						background-color: #f1f1f1;
 					}
 					a {
-						padding-right: 10px;
+						padding-left: 20px;
 					}
+					// a {
+					// 	padding-right: 10px;
+					// }
 				}	
 			}
-			.level4 {
+			&.level4 {
 				li {
 					a {
-						font-weight: 200
+						font-weight: 200;
+						padding-left: 30px;
 					}
 					&:hover{
-					color: $grey;
-					font-weight: 400;
-					background-color: #f1f1f1;
+						color: $grey;
+						font-weight: 400;
+						background-color: #f1f1f1;
+					}
+					&.active > a {
+						font-weight: bold;
 					}
 				}	
 			}
 			li {
+				
 				margin: 0;
-				background-repeat: no-repeat;
-				background-position: bottom right;
 				font-weight: 200;
 				list-style-type: none;
-				border-bottom: #ccc solid 1px;
-				text-align: right;
-				padding: 13px 0px 13px 10px;
 				
-				//&:nth-child(1) {
-    			//	padding: 17px 0px 0px 0px;
-				//}
-				
+				text-align: left;
+				&.active {
+					border-left: solid 4px $orange;
+					&.parent > a {
+						background-image: url('img/arrow-down.png');
+					}
+				}
+				&.parent > a {
+					background-image: url('img/arrow-right.png');
+					background-position: center right 6px ;
+					background-repeat: no-repeat;
+					padding-right: 15px;
+				}
 				a {
 					color: $grey;
-					padding-right: 10px;
+					// padding-right: 10px;
+					display: block;
+					//margin-right: 6px;
+					padding: 10px;
+					border-bottom: #ccc solid 1px;
 					&:hover {
 						color: $grey;
 						font-weight: 400;
@@ -76,6 +92,7 @@
 					color: $grey;
 					background-color: #f1f1f1;
 					text-decoration: none;
+					font-weight: 700;
 				}
 				&.active {
 					background-color: $light-grey;
@@ -87,7 +104,6 @@
 						li {
 							a { 
 								@extend %current-link;
-								font-weight: bold;
 							}
 						}
 					}
@@ -95,7 +111,6 @@
 						li {
 							a { 
 								@extend %current-link;
-								font-weight: bold;
 							}
 						}
 					}
@@ -112,7 +127,6 @@
 					}
 					.level3 {
 						li {
-							border-bottom: none;
 							a { 
 								@extend %current-link;
 							}
@@ -125,3 +139,4 @@
 		}
 	}
 }
+
