--- a/css/styles.css
+++ b/css/styles.css
@@ -138,6 +138,11 @@ main p {
   line-height: 1.6em;
 }
 
+.programs .btn {
+  width: 100%;
+  padding: 1em;
+}
+
 .page-content .btn {
   margin: 1em auto;
   font-size: 1em;
