--- a/css/styles.css
+++ b/css/styles.css
@@ -128,10 +128,28 @@ main h1 {
   margin-top: 0px;
 }
 main h2 {
-  font-size: 1.5em;
-  line-height: 1.5em;
+  font-size: 1.6em;
+  line-height: 1.6em;
   color: #686868;
   text-transform: uppercase;
+  font-weight: 600;
+}
+main h3, main .h3 {
+  color: #686868;
+  font-family: "Open Sans", sans-serif;
+  font-size: 1.4em;
+  font-weight: 600;
+}
+main h4, main .h4 {
+  color: #686868;
+  font-family: "Open Sans", sans-serif;
+  font-size: 1.2em;
+  font-weight: 600;
+}
+main h5, main .h5 {
+  color: #686868;
+  font-family: "Open Sans", sans-serif;
+  font-size: 1em;
   font-weight: 600;
 }
 main p {
@@ -762,20 +780,6 @@ article button {
 }
 
 /* CUSTOM STYLES FOR CONTENT */
-h3, .h3 {
-  color: #686868;
-  font-family: "Open Sans", sans-serif;
-  font-size: 1.5em;
-  text-transform: uppercase;
-}
-
-h4, .h4 {
-  color: #686868;
-  font-family: "Open Sans", sans-serif;
-  font-size: 16px;
-  text-transform: uppercase;
-}
-
 p {
   color: #686868;
   font-family: "Open Sans", sans-serif;
