--- a/css/styles.scss
+++ b/css/styles.scss
@@ -27,17 +27,40 @@ main {
 	}
 	
 	h2 {
-		font-size: 1.5em;
-		line-height: 1.5em;
+		font-size: 1.6em;
+		line-height: 1.6em;
 		color: $grey;
 		text-transform: uppercase;
 		font-weight: 600;
 	}
+	h3,.h3 {
+		color: $grey;
+		font-family: $font;
+		font-size: 1.4em;
+		font-weight: 600;
+	}
+
+	h4,.h4 {
+		color: $grey;
+		font-family: $font;
+		font-size: 1.2em;
+		font-weight: 600;
+	}
 	
+	h5,.h5 {
+		color: $grey;
+		font-family: $font;
+		font-size: 1em;
+		font-weight: 600;
+	}
+
 	p {
 		line-height: 1.6em;
 	}
 }
+
+
+
 .programs .btn {
 	width: 100%;
 	padding: 1em;
@@ -463,19 +486,7 @@ article {
 
 /* CUSTOM STYLES FOR CONTENT */
 
-h3,.h3 {
-	color: $grey;
-	font-family: $font;
-	font-size: 1.5em;
-	text-transform: uppercase;
-}
 
-h4,.h4 {
-	color: $grey;
-	font-family: $font;
-	font-size: 16px;
-	text-transform: uppercase;
-}
 
 p {
 	color: $grey;
